# ultrahuman_api_client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test-using-latest.yml
src/ultrahuman_api_client/: client.py  exceptions.py  models.py
tests/: conftest.py  test_client.py  test_example.py  test_exceptions.py  test_models.py
